--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-image-gallery": "^1.3.0",
+    "react-medium-image-zoom": "^5.1.10",
     "react-player": "^2.14.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "web-vitals": "^2.1.4"
