--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "emailjs": "^4.0.3",
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -13,8 +17,11 @@
     "react-medium-image-zoom": "^5.1.10",
     "react-player": "^2.14.1",
     "react-responsive-carousel": "^3.2.23",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.8",
+    "tsparticles": "^3.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
